bad/func_return_type_of_nonexistent_class.example_compiler_output
ERROR
[1mbad/func_return_type_of_nonexistent_class.lat:2:1: [1;31merror: [0;1mUnknown class: list[m
list foo(int x) {}
[1;32m^[m
